update domain to cloud.cbh.kth.se

--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
     <h1>kthcloud</h1> <br>
     To experience this page properly, please enable JavaScript. <br><br>
     <b>Navigation</b><br>
-        <a href="dashboard.kthcloud.com">dashboard.kthcloud.com</a> <br>
-        <a href="k8s.kthcloud.com">k8s.kthcloud.com</a> <br>
-        <a href="k8s.prod.kthcloud.com">k8s.prod.kthcloud.com</a> <br>
-        <a href="k8s.dev.kthcloud.com">k8s.dev.kthcloud.com</a> <br>
-        <a href="proxy.kthcloud.com">proxy.kthcloud.com</a> <br>
-        <a href="proxy.prod.kthcloud.com">proxy.prod.kthcloud.com</a> <br>
-        <a href="proxy.dev.kthcloud.com">proxy.dev.kthcloud.com</a> <br>
-        <a href="iam.kthcloud.com">iam.kthcloud.com</a> <br>
+        <a href="dashboard.cloud.cbh.kth.se">dashboard.cloud.cbh.kth.se</a> <br>
+        <a href="k8s.cloud.cbh.kth.se">k8s.cloud.cbh.kth.se</a> <br>
+        <a href="k8s.prod.cloud.cbh.kth.se">k8s.prod.cloud.cbh.kth.se</a> <br>
+        <a href="k8s.dev.cloud.cbh.kth.se">k8s.dev.cloud.cbh.kth.se</a> <br>
+        <a href="proxy.cloud.cbh.kth.se">proxy.cloud.cbh.kth.se</a> <br>
+        <a href="proxy.prod.cloud.cbh.kth.se">proxy.prod.cloud.cbh.kth.se</a> <br>
+        <a href="proxy.dev.cloud.cbh.kth.se">proxy.dev.cloud.cbh.kth.se</a> <br>
+        <a href="iam.cloud.cbh.kth.se">iam.cloud.cbh.kth.se</a> <br>
   </noscript>
   <div id="root"></div>
 </body>
