Rebrand to cbhcloud

--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,16 @@
   <!-- Using Local Font -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-  <title>kthcloud</title>
+  <title>cbhcloud</title>
   <meta name="description"
-    content="kthcloud - KTH software makerspace cloud provider. Use kthcloud for your software projects and machine learning crunching." />
+    content="cbhcloud - KTH software makerspace cloud provider. Use cbhcloud for your software projects and machine learning crunching." />
   <meta name="keywords" content="cloud,iaas,caas,kubernetes,jupyter" />
-  <meta name="author" content="kthcloud" />
+  <meta name="author" content="cbhcloud" />
 </head>
 
 <body>
   <noscript>
-    <h1>kthcloud</h1> <br>
+    <h1>cbhcloud</h1> <br>
     To experience this page properly, please enable JavaScript. <br><br>
     <b>Navigation</b><br>
         <a href="dashboard.cloud.cbh.kth.se">dashboard.cloud.cbh.kth.se</a> <br>
