--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
   <!-- Using Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@200;400;500;600;700&display=swap" rel="stylesheet">
 
   <title>cbhcloud</title>
   <meta name="description"
