--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png" />
+        <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#00c2e7" />
 
-<head>
-  <meta charset="utf-8" />
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#00c2e7">
+        <!-- Colors -->
+        <meta name="msapplication-TileColor" content="#00c2e7" />
+        <meta name="theme-color" content="#ffffff" />
 
-  <!-- Colors -->
-  <meta name="msapplication-TileColor" content="#00c2e7">
-  <meta name="theme-color" content="#ffffff">
+        <!-- Meta -->
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <!-- Meta -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <!-- Using Google Font -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@200;400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
 
-  <!-- Using Google Font -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@200;400;500;600;700&display=swap" rel="stylesheet">
+        <title>cbhcloud</title>
+        <meta
+            name="description"
+            content="cbhcloud - KTH software makerspace cloud provider. Use cbhcloud for your software projects and machine learning crunching."
+        />
+        <meta name="keywords" content="cloud,iaas,caas,kubernetes,jupyter" />
+        <meta name="author" content="cbhcloud" />
+    </head>
 
-  <title>cbhcloud</title>
-  <meta name="description"
-    content="cbhcloud - KTH software makerspace cloud provider. Use cbhcloud for your software projects and machine learning crunching." />
-  <meta name="keywords" content="cloud,iaas,caas,kubernetes,jupyter" />
-  <meta name="author" content="cbhcloud" />
-</head>
-
-<body>
-  <noscript>
-    <h1>cbhcloud</h1> <br>
-    To experience this page properly, please enable JavaScript. <br><br>
-    <b>Navigation</b><br>
-        <a href="dashboard.cloud.cbh.kth.se">dashboard.cloud.cbh.kth.se</a> <br>
-        <a href="k8s.cloud.cbh.kth.se">k8s.cloud.cbh.kth.se</a> <br>
-        <a href="k8s.prod.cloud.cbh.kth.se">k8s.prod.cloud.cbh.kth.se</a> <br>
-        <a href="k8s.dev.cloud.cbh.kth.se">k8s.dev.cloud.cbh.kth.se</a> <br>
-        <a href="iam.cloud.cbh.kth.se">iam.cloud.cbh.kth.se</a> <br>
-  </noscript>
-  <div id="root"></div>
-</body>
-
+    <body>
+        <noscript>
+            <h1>cbhcloud</h1>
+            <br />
+            To experience this page properly, please enable JavaScript. <br /><br />
+            <b>Navigation</b><br />
+            <a href="dashboard.cloud.cbh.kth.se">dashboard.cloud.cbh.kth.se</a> <br />
+            <a href="k8s.cloud.cbh.kth.se">k8s.cloud.cbh.kth.se</a> <br />
+            <a href="k8s.prod.cloud.cbh.kth.se">k8s.prod.cloud.cbh.kth.se</a> <br />
+            <a href="k8s.dev.cloud.cbh.kth.se">k8s.dev.cloud.cbh.kth.se</a> <br />
+            <a href="iam.cloud.cbh.kth.se">iam.cloud.cbh.kth.se</a> <br />
+        </noscript>
+        <div id="root"></div>
+    </body>
 </html>
