--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         />
         <meta name="keywords" content="cloud,iaas,caas,kubernetes,jupyter" />
         <meta name="author" content="cbhcloud" />
-        <script type="module" src="/src/main.jsx"></script>
+        <script type="module" src="index.jsx"></script>
     </head>
 
     <body>
