Update some locale string

--- a/index.html
+++ b/index.html
@@ -36,14 +36,7 @@
     <body>
         <noscript>
             <h1>cbhcloud</h1>
-            <br />
-            To experience this page properly, please enable JavaScript. <br /><br />
-            <b>Navigation</b><br />
-            <a href="dashboard.cloud.cbh.kth.se">dashboard.cloud.cbh.kth.se</a> <br />
-            <a href="k8s.cloud.cbh.kth.se">k8s.cloud.cbh.kth.se</a> <br />
-            <a href="k8s.prod.cloud.cbh.kth.se">k8s.prod.cloud.cbh.kth.se</a> <br />
-            <a href="k8s.dev.cloud.cbh.kth.se">k8s.dev.cloud.cbh.kth.se</a> <br />
-            <a href="iam.cloud.cbh.kth.se">iam.cloud.cbh.kth.se</a> <br />
+            To experience this page properly, please enable JavaScript.
         </noscript>
         <div id="root"></div>
     </body>
