--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00c2e7" />
 
-        <!-- Colors -->
-        <meta name="msapplication-TileColor" content="#00c2e7" />
-        <meta name="theme-color" content="#ffffff" />
+<head>
+    <meta charset="utf-8" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00c2e7" />
 
-        <!-- Meta -->
-        <link rel="manifest" href="/manifest.json" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Colors -->
+    <meta name="msapplication-TileColor" content="#00c2e7" />
+    <meta name="theme-color" content="#ffffff" />
 
-        <!-- Using Google Font -->
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@200;400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
+    <!-- Meta -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <title>cbhcloud</title>
-        <meta
-            name="description"
-            content="cbhcloud - KTH software makerspace cloud provider. Use cbhcloud for your software projects and machine learning crunching."
-        />
-        <meta name="keywords" content="cloud,iaas,caas,kubernetes,jupyter" />
-        <meta name="author" content="cbhcloud" />
-        <script type="module" src="index.jsx"></script>
-    </head>
+    <!-- Using Google Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@200;400;500;600;700&display=swap"
+        rel="stylesheet" />
 
-    <body>
-        <noscript>
-            <h1>cbhcloud</h1>
-            To experience this page properly, please enable JavaScript.
-        </noscript>
-        <div id="root"></div>
-    </body>
+    <title>cbhcloud</title>
+    <meta name="description"
+        content="cbhcloud - KTH software makerspace cloud provider. Use cbhcloud for your software projects and machine learning crunching." />
+    <meta name="keywords" content="cloud,iaas,caas,kubernetes,jupyter" />
+    <meta name="author" content="cbhcloud" />
+</head>
+
+<body>
+    <noscript>
+        <h1>cbhcloud</h1>
+        To experience this page properly, please enable JavaScript.
+    </noscript>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
